[package]
name = "gphoto2-sys"
version = "0.1.2"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "FFI bindings to libgphoto2"
homepage = "https://github.com/dcuddeback/gphoto2-sys"
repository = "https://github.com/dcuddeback/gphoto2-sys"
license = "MIT"
readme = "README.md"
keywords = ["libgphoto2", "gphoto", "camera", "hardware"]

build = "build.rs"
links = "gphoto2"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.2"
